# server.js
@@ -21,7 +21,7 @@ app.use(cors());
 
 app.use(function (req, res, next) {
  res.header("Access-Control-Allow-Origin", "*")
- res.header("Access-Control-Allow-Headers", "Authorization, auth-token, Origin, X-Requested-With, Content-Type, Accept")
+ res.header("Access-Control-Allow-Headers", "Authorization, Origin, X-Requested-With, Content-Type, Accept")
  res.header("Access-Control-Allow-Method", "GET, HEAD, OPTION, POST, PUT, DELETE");
  next();
 })
